--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@ body {
 
 h1 {
   font-family: "roboto", sans-serif;
-  color: rgb(195, 105, 105);
+  color: #4c9173;
   font-size: 18px;
   font-weight: normal;
+  text-align: center;
 }
 
 .world-clock {
-  background: rgb(219, 193, 99);
+  background: #ddeedf;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -20,5 +21,7 @@ h1 {
 }
 
 footer {
+  font-size: 12px;
   text-align: center;
+  color: #606470;
 }
