--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
   text-align: center;
 }
 
-.world-clock {
+.container {
   background: #ddeedf;
   max-width: 600px;
   margin: 45px auto;
@@ -27,10 +27,10 @@ footer {
 }
 
 select {
-  font-size: 16px;
+  font-size: 14px;
   background: grey;
   color: white;
   border: 0;
-  padding: 15px 20px;
+  padding: 10px 10px;
   border-radius: 10px;
 }
