--- a/style.css
+++ b/style.css
@@ -56,10 +56,20 @@ select {
   font-weight: bold;
 }
 
+.city:last-child {
+  border: none;
+}
+
 .date {
   color: #2c786c;
   font-family: sans-serif;
   opacity: 0.7;
+}
+
+.time small {
+  font-size: 24px;
+  vertical-align: middle;
+  line-height: 48px;
 }
 
 footer {
