--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
   background-color: white;
-  font-family: "roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 h1 {
-  font-family: sans-serif;
-  color: #430f58;
+  font-family: "Open Sans", sans-serif;
+  color: black;
   font-size: 38px;
   text-align: center;
 }
@@ -14,13 +14,13 @@ h2,
 h3,
 h4 {
   margin: 0 0 5px;
-  font-family: "roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: black;
   font-size: 24px;
 }
 
 .container {
-  font-family: "roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
   background: #f5f5f1d0;
   max-width: 600px;
   margin: 45px auto;
@@ -34,8 +34,8 @@ select {
   display: block;
   width: 100%;
   font-size: 16px;
-  background: #d3d6db;
-  color: #57385c;
+  background: #dbdcde;
+  color: black;
   border: 0;
   padding: 10px 10px;
   border-radius: 10px;
@@ -44,7 +44,7 @@ select {
 .city {
   display: flex;
   margin: 10px 0;
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   justify-content: space-between;
   color: black;
   border-bottom: 1px dotted #a7bcb9;
@@ -62,14 +62,14 @@ select {
 
 .date {
   color: black;
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   opacity: 0.7;
 }
 
 .time small {
-  font-size: 24px;
+  font-size: 18px;
   vertical-align: middle;
-  line-height: 48px;
+  line-height: 40px;
 }
 
 footer {
